--- a/BangunIn/composer.json
+++ b/BangunIn/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2.5",
         "barryvdh/laravel-dompdf": "^0.8.7",
         "barryvdh/laravel-snappy": "^0.4.8",
+        "dompdf/dompdf": "^0.8.6",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
